--- a/rescue-a-paw/src/app/donations/donations.component.html
+++ b/rescue-a-paw/src/app/donations/donations.component.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-3" *ngFor="let block of blocks; let i = index">
         <div class="block">
-          <img [src]="block.img" alt="{{ block.alt }}">
+          <img [src]="block.img" [alt]="block.alt">
           <div class="text">
             <h2>{{ block.title }}</h2>
             <p>{{ block.content }}</p>
